fix borders on contact form on mobile

--- a/datadraft/css/main.css
+++ b/datadraft/css/main.css
@@ -349,6 +349,7 @@ label {
   width: 100%;
   padding: 5px;
   margin: 5px 0 10px 0;
+  border: 2px solid rgb(238, 238, 238);
 }
 
 #contact-content textarea {
